Fix baseURL case - use lowercase username

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://QiyuanY.github.io/'
+baseURL = 'https://qiyuany.github.io/'
 languageCode = 'zh-cn'
 title = '我的个人博客'
 theme = 'PaperMod'
